[Docs]: API 명세서 수정 및 requirements.txt 업데이트
- Swagger 문서화를 통한 API 명세서 보완
- requirements.txt 업데이트
